# Tools

0100_on_pc/BusinessServiceFrameworkPortable/port.orig/FoundationServiceManager/fs_config/src/libfscfg/: CMakeLists.txt  Makefile  config_proxy.cpp  discovery_proxy.cpp  fscfg.cpp  object_manager_proxy.cpp  provisioning_proxy.cpp  source_proxy.cpp  worker_proxy.cpp
0100_on_pc/BusinessServiceFrameworkPortable/port.orig/FoundationServiceManager/test/unittest/ccm/: CMakeLists.txt  certUtils.cpp  unittest_signals.cc
0100_on_pc/BusinessServiceFrameworkPortable/port.orig/FoundationServiceManager/test/unittest/transfermanager/: CMakeLists.txt  unittest_cache_utils.cpp  unittest_http_cache_db.h
0100_on_pc/BusinessServiceFrameworkPortable/port.orig/FoundationServiceManager/voc_framework/src/http/: CMakeLists.txt  http_get.cc  http_get_test.cc  http_get_test.h
0100_on_pc/BusinessServiceFrameworkPortable/port.orig/ServiceFramework/: .gitignore  CMakeLists.txt
0100_on_pc/BusinessServiceFrameworkPortable/port.orig/ServiceFramework/include/: comalog.h  eventhandlerfunctionbase.h  eventstatemachineresult.h  itimermaster.h  lifecycle.h  mutex_POSIX.h  noncopyable.h  operatingsystem.h  referencecounter.h  releasepolicy.h  scopedlock.h  stringutils.h  threadeventqueue.h  timeelapse.h  timer.h
0100_on_pc/BusinessServiceFrameworkPortable/port.orig/ServiceFramework/project/vs2015/ServiceFramework/: ServiceFramework.sln
0100_on_pc/BusinessServiceFrameworkPortable/port.orig/ServiceFramework/src/: CMakeLists.txt  atomiccounter.cpp  binaryringbuffer.cpp  comalog.cpp  dynamiclibrary_POSIX.cpp  dynamiclibrary_WIN32.cpp  eventstatemachineresult.cpp  istatemachine.cpp  mutex_WIN32.cpp  networkinterface.cpp  semaphore_POSIX.cpp  semaphore_WIN32.cpp
0100_on_pc/BusinessServiceFrameworkPortable/port.orig/ServiceFramework/test/src/: test_eventhandler.cpp  test_timeelapse.cpp
0100_on_pc/BusinessServiceFrameworkPortable/port.orig/VehicleComm/: CMakeLists.txt  vc.service  vc_lcm.cpp  vc_log.cpp  vc_message_queue.cpp  vc_session_list.cpp  vehicle_comm_test.cpp  vehicle_comm_test.hpp
0100_on_pc/BusinessServiceFrameworkPortable/port.orig/VehicleComm/include/: vc_lcm.hpp  vc_log.hpp  vc_message_processor.hpp  vc_session_list.hpp  vc_utility.hpp  vc_watchdog.hpp
0100_on_pc/BusinessServiceFrameworkPortable/port.orig/VehicleComm/interface/: vehicle_comm_interface.hpp  vehicle_comm_messages.hpp  vehicle_comm_types.hpp
0100_on_pc/BusinessServiceFrameworkPortable/port.orig/VehicleComm/lan_comm/: CMakeLists.txt  ihu_comm.cpp  ihu_comm.hpp  lan_base.cpp  lan_base.hpp  lan_comm.hpp  lan_comm.json  vgm_comm.hpp
0100_on_pc/BusinessServiceFrameworkPortable/port.orig/VehicleComm/lan_server/: README  ihu_server.cpp  ihu_server.hpp  ihu_server_udp.json  someip_server.hpp  start_server.sh  vgm_server_tcp.json  vgm_server_udp.json
0100_on_pc/BusinessServiceFrameworkPortable/port.orig/VehicleComm/proxy/: vc_proxy.hpp  vc_proxy.pc
0100_on_pc/BusinessServiceFrameworkPortable/port.orig/VehicleComm/proxy_host/: ts_comm.hpp  vc_proxy_host.cpp
0100_on_pc/BusinessServiceFrameworkPortable/port.orig/VehicleComm/vc_test/: CMakeLists.txt
0100_on_pc/BusinessServiceFrameworkPortable/port.orig/VehicleComm/vuc_comm/: vuc_comm.cpp  vuc_comm.hpp  vuc_messages.hpp  vuc_trace.hpp
0100_on_pc/BusinessServiceFrameworkPortable/port.orig/VolvoOnCall/test/unitest_geely/src/: CMakeLists.txt
0100_on_pc/BusinessServiceFrameworkPortable/port/FoundationServiceManager/fs_config/: CMakeLists.txt
0100_on_pc/BusinessServiceFrameworkPortable/port/FoundationServiceManager/fs_config/interface/introspection/: Makefile  com.contiautomotive.tcam.FoundationServices.Config.Encoding.xml  com.contiautomotive.tcam.FoundationServices.Config.Feature.xml  com.contiautomotive.tcam.FoundationServices.Config.Resource.xml  com.contiautomotive.tcam.FoundationServices.Config.Source.xml  com.contiautomotive.tcam.FoundationServices.Provisioning.xml
0100_on_pc/BusinessServiceFrameworkPortable/port/FoundationServiceManager/fs_config/src/fscfg_client/: CMakeLists.txt
0100_on_pc/BusinessServiceFrameworkPortable/port/FoundationServiceManager/fs_config/src/fscfg_common/: CMakeLists.txt  Makefile  discovery_bind.cpp  feature_bind.cpp  provisioning_bind.cpp
0100_on_pc/BusinessServiceFrameworkPortable/port/FoundationServiceManager/fs_config/src/fscfgd/: CMakeLists.txt  Makefile  com.contiautomotive.tcam.FoundationServices.Config.conf  config.cpp  daemon.cpp  daemon_event_queue.cpp  discovery_provider.cpp  expiry_notification_signal.cpp  feature.cpp  feature_processor.cpp  fscfgd.cpp  parsing_utilities.cpp  provisionedresource.cpp  provisioning.cpp  resource.cpp  vsdpsource.cpp
0100_on_pc/BusinessServiceFrameworkPortable/port/FoundationServiceManager/fs_config/src/libfscfg/: encoding_proxy.cpp  feature_proxy.cpp  libfsm_fscfg.pc  provisionedresource_proxy.cpp  resource_proxy.cpp
0100_on_pc/BusinessServiceFrameworkPortable/port/FoundationServiceManager/fs_config/test/fscfgd/: manual_test.cpp  test_utilities.cpp
0100_on_pc/BusinessServiceFrameworkPortable/port/UserManager/test/unittest/src/: CMakeLists.txt  unittest_keystore.cpp  utilities.cpp
0100_on_pc/BusinessServiceFrameworkPortable/port/VehicleComm/lan_server/: CMakeLists.txt  build.sh  gcc4_6_3.patch  ihu_server_tcp.json  someip_server.cpp  vgm_server.cpp  vgm_server.hpp
0100_on_pc/BusinessServiceFrameworkPortable/port/VehicleComm/proxy/: CMakeLists.txt  vc_proxy.cpp
0100_on_pc/BusinessServiceFrameworkPortable/port/VehicleComm/proxy_host/: CMakeLists.txt  VehicleComm.xml  ts_comm.cpp  vc_proxy_host.hpp
0100_on_pc/BusinessServiceFrameworkPortable/port/VehicleComm/proxy_host/cfg/: com.contiautomotive.tcam.vehiclecomm.conf
0100_on_pc/BusinessServiceFrameworkPortable/port/VehicleComm/vuc_comm/: CMakeLists.txt  vuc_trace.cpp
0100_on_pc/remote_test_prog/app/: CMakeLists.txt  hmi_app_user.cpp  hmi_app_user.h  hmi_kbd_user.cpp  hmi_setting_user.cpp  main.cpp  xxx_user.cpp
0100_on_pc/remote_test_prog/tk/: CMakeLists.txt  TK_DebugServer.cpp  TK_DebugServer.h  TK_Tools.cpp  TK_Tools.h  TK_sock.cpp
(+2479 files in other folders)
