cmake_minimum_required(VERSION 2.8)

PROJECT (RTH)
SET(SRC_LIST main.cpp xxx_user.cpp)
INCLUDE_DIRECTORIES(../tk)
INCLUDE_DIRECTORIES(${CMAKE_FIND_ROOT_PATH}/usr/include)
INCLUDE_DIRECTORIES(${CMAKE_FIND_ROOT_PATH}/usr/include/oip/public/OIP_SSW/Persistence/ClientLibrary)
LINK_DIRECTORIES(../tk_build)
MESSAGE(STATUS "This is BINARY dir " ${RTH_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir "${RTH_SOURCE_DIR})
ADD_EXECUTABLE(rth ${SRC_LIST})
TARGET_LINK_LIBRARIES(rth libtk.a persistence_client_library z dlt pers_common ssw_pers_cache_access sqlite3 gio-2.0 gobject-2.0 gmodule-2.0 gthread-2.0 glib-2.0 ffi)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pthread -L${CMAKE_FIND_ROOT_PATH}/usr/lib")
